--- a/load_dataset.ipynb
+++ b/load_dataset.ipynb
@@ -17,8 +17,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading dataset from external data\n",
-      "Load cached graph with meta link types ['brand']\n"
+      "Loading QA dataset from data/amazon/stark_qa/stark_qa.csv\n",
+      "Load cached graph with meta link types ['brand', 'category', 'color']\n"
      ]
     }
    ],
@@ -100,6 +100,66 @@
     "\n",
     "# Alternatively, you can get the split indices\n",
     "qa_dataset.get_idx_split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load QA dataset - Human generated split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading QA dataset from data/amazon/stark_qa/stark_qa_human_generated_eval.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "81"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We provide a human generated evaluation set\n",
+    "qa_dataset_hg = get_qa_dataset(dataset_name, human_generated_eval=True)\n",
+    "len(qa_dataset_hg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'human_generated_eval': tensor([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+       "         18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35,\n",
+       "         36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53,\n",
+       "         54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71,\n",
+       "         72, 73, 74, 75, 76, 77, 78, 79, 80])}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qa_dataset_hg.get_idx_split()"
    ]
   },
   {
