--- a/load_dataset.ipynb
+++ b/load_dataset.ipynb
@@ -2,34 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/dfs/scratch0/shirwu/anaconda3/envs/torch2/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading QA dataset from data/amazon/stark_qa/stark_qa.csv\n",
-      "Load cached graph with meta link types ['brand', 'category', 'color']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.benchmarks.get_qa_dataset import get_qa_dataset\n",
     "from src.benchmarks.get_semistruct import get_semistructured_data\n",
     "\n",
     "dataset_name = 'amazon'\n",
-    "\n",
     "qa_dataset = get_qa_dataset(dataset_name)\n",
-    "kb = get_semistructured_data(dataset_name)"
+    "kb = get_semistructured_data(dataset_name, download_processed=True)"
    ]
   },
   {
@@ -41,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +31,7 @@
      "output_type": "stream",
      "text": [
       "Query: Looking for a user-friendly fly fishing knot guide with clear, easy-to-understand illustrations. Ideally, it should be logically organised for easy learning and effective in teaching dependable knot tying techniques. It would be a bonus if it complements the Anglers Accessories Gehrke's Gink that I frequently use. Any recommendations?\n",
-      "Query ID: 30\n",
+      "Query ID: 1\n",
       "Answer:\n",
       " Lake Products THREE-in-One Knot Tying Tool Fly Fishing\n",
       "EZ Tie Blood Knot Tying Tool\n",
@@ -67,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +69,7 @@
        " 'test': tensor([2905, 3863, 4651,  ..., 3891, 7631, 4472])}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +109,7 @@
        "81"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +135,7 @@
        "         72, 73, 74, 75, 76, 77, 78, 79, 80])}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,19 +153,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('brand', 'has_brand', 'product'),\n",
+       " ('category', 'has_category', 'product'),\n",
+       " ('color', 'has_color', 'product'),\n",
        " ('product', 'also_buy', 'product'),\n",
        " ('product', 'also_view', 'product'),\n",
-       " ('product', 'has_brand', 'brand')]"
+       " ('product', 'has_brand', 'brand'),\n",
+       " ('product', 'has_category', 'category'),\n",
+       " ('product', 'has_color', 'color')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +442,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(129375, 8100498)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kb.num_nodes(), kb.num_edges()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +474,7 @@
        " None)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
