refactor for pip

--- a/load_dataset.ipynb
+++ b/load_dataset.ipynb
@@ -2,16 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/dfs/scratch0/shirwu/anaconda3/envs/torch2/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading QA dataset from data/amazon/stark_qa/stark_qa.csv\n",
+      "Load cached graph with meta link types ['brand', 'category', 'color']\n"
+     ]
+    }
+   ],
    "source": [
-    "from src.benchmarks.get_qa_dataset import get_qa_dataset\n",
-    "from src.benchmarks.get_semistruct import get_semistructured_data\n",
+    "from stark_qa import load_qa, load_skb\n",
     "\n",
     "dataset_name = 'amazon'\n",
-    "qa_dataset = get_qa_dataset(dataset_name)\n",
-    "kb = get_semistructured_data(dataset_name, download_processed=True)"
+    "qa_dataset = load_qa(dataset_name)\n",
+    "skb = load_skb(dataset_name, download_processed=True)"
    ]
   },
   {
@@ -23,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,12 +60,12 @@
     "query, q_id, answer_ids, _ = qa_dataset[1]\n",
     "print('Query:', query)\n",
     "print('Query ID:', q_id)\n",
-    "print('Answer:\\n', '\\n'.join([kb[aid].title for aid in answer_ids]))"
+    "print('Answer:\\n', '\\n'.join([skb[aid].title for aid in answer_ids]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +85,7 @@
        " 'test': tensor([2905, 3863, 4651,  ..., 3891, 7631, 4472])}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,20 +125,20 @@
        "81"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# We provide a human generated evaluation set\n",
-    "qa_dataset_hg = get_qa_dataset(dataset_name, human_generated_eval=True)\n",
+    "qa_dataset_hg = load_qa(dataset_name, human_generated_eval=True)\n",
     "len(qa_dataset_hg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +151,7 @@
        "         72, 73, 74, 75, 76, 77, 78, 79, 80])}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -169,59 +185,60 @@
        " ('product', 'has_color', 'color')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# You can see part of the knowledge base schema here\n",
-    "kb.get_tuples()"
+    "skb.get_tuples()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['product', 'brand'], ['also_buy', 'also_view', 'has_brand'])"
+       "(['product', 'brand', 'category', 'color'],\n",
+       " ['also_buy', 'also_view', 'has_brand', 'has_category', 'has_color'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Similarly, you can get the node and relation types \n",
-    "kb.node_type_lst(), kb.rel_type_lst()"
+    "skb.node_type_lst(), skb.rel_type_lst()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes: 1032407\n",
-      "Number of edges: 6455692\n"
+      "Number of nodes: 1035542\n",
+      "Number of edges: 9443802\n"
      ]
     }
    ],
    "source": [
-    "print('Number of nodes:', kb.num_nodes())\n",
-    "print('Number of edges:', kb.num_edges())"
+    "print('Number of nodes:', skb.num_nodes())\n",
+    "print('Number of edges:', skb.num_edges())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -234,10 +251,12 @@
        "  'features',\n",
        "  'reviews',\n",
        "  'Q&A'],\n",
-       " 'brand': ['brand_name']}"
+       " 'brand': ['brand_name'],\n",
+       " 'category': ['category_name'],\n",
+       " 'color': ['color_name']}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,12 +264,12 @@
    "source": [
     "# We include the attributes in node's textual information as part of the schema\n",
     "# Note that some nodes may not have all attributes while some may have additional attributes\n",
-    "kb.node_attr_dict"
+    "skb.node_attr_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -370,12 +389,12 @@
    ],
    "source": [
     "# Each node has textual information\n",
-    "print(kb.get_doc_info(answer_ids[0], add_rel=False))"
+    "print(skb.get_doc_info(answer_ids[0], add_rel=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -388,13 +407,13 @@
    ],
    "source": [
     "# Each node can be linked to other nodes\n",
-    "neighbor_lst = kb.get_neighbor_nodes(answer_ids[0], edge_type='*')\n",
+    "neighbor_lst = skb.get_neighbor_nodes(answer_ids[0], edge_type='*')\n",
     "print('The neighbors of the answer node are:', len(neighbor_lst))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +427,7 @@
    "source": [
     "# Count the number of each type\n",
     "from collections import Counter\n",
-    "neighbor_types = [kb.get_node_type_by_id(neighbor) for neighbor in neighbor_lst]\n",
+    "neighbor_types = [skb.get_node_type_by_id(neighbor) for neighbor in neighbor_lst]\n",
     "print(Counter(neighbor_types))"
    ]
   },
@@ -421,28 +440,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading dataset from external data\n",
-      "Loaded from data/primekg/processed!\n"
+      "Loading QA dataset from data/prime/stark_qa/stark_qa.csv\n",
+      "Loaded from data/prime/processed!\n"
      ]
     }
    ],
    "source": [
-    "dataset_name = 'primekg'\n",
+    "dataset_name = 'prime'\n",
     "\n",
-    "qa_dataset = get_qa_dataset(dataset_name)\n",
-    "kb = get_semistructured_data(dataset_name)"
+    "qa_dataset = load_qa(dataset_name)\n",
+    "skb = load_skb(dataset_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -451,18 +470,18 @@
        "(129375, 8100498)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kb.num_nodes(), kb.num_edges()"
+    "skb.num_nodes(), skb.num_edges()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +493,7 @@
        " None)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -515,12 +534,12 @@
     }
    ],
    "source": [
-    "print(kb.get_doc_info(15450, add_rel=False))"
+    "print(skb.get_doc_info(15450, add_rel=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +559,7 @@
     }
    ],
    "source": [
-    "print(kb.get_rel_info(15450))"
+    "print(skb.get_rel_info(15450))"
    ]
   },
   {
