change hf download folder

--- a/load_dataset.ipynb
+++ b/load_dataset.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -453,15 +453,16 @@
     }
    ],
    "source": [
+    "from stark_qa import load_qa, load_skb\n",
     "dataset_name = 'prime'\n",
     "\n",
     "qa_dataset = load_qa(dataset_name)\n",
-    "skb = load_skb(dataset_name)"
+    "skb = load_skb(dataset_name, download_processed=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +471,7 @@
        "(129375, 8100498)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +494,7 @@
        " None)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
