prepare for doc; update api with env variable

--- a/load_dataset.ipynb
+++ b/load_dataset.ipynb
@@ -17,8 +17,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading QA dataset from data/amazon/stark_qa/stark_qa.csv\n",
-      "Load cached graph with meta link types ['brand', 'category', 'color']\n"
+      "Use file from /dfs/user/shirwu/.cache/huggingface/hub/datasets--snap-stanford--stark/snapshots/d4e405448836cbbc053241f99be29f7d81d1763c/qa/amazon/stark_qa/stark_qa_human_generated_eval.csv.\n",
+      "Loading from /dfs/user/shirwu/.cache/huggingface/hub/datasets--snap-stanford--stark/snapshots/d4e405448836cbbc053241f99be29f7d81d1763c/skb/amazon/processed!\n",
+      "Loading cached graph with meta link types ['brand', 'category', 'color']\n"
      ]
     }
    ],
@@ -116,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading QA dataset from data/amazon/stark_qa/stark_qa_human_generated_eval.csv\n"
+      "Use file from /dfs/user/shirwu/.cache/huggingface/hub/datasets--snap-stanford--stark/snapshots/d4e405448836cbbc053241f99be29f7d81d1763c/qa/amazon/stark_qa/stark_qa_human_generated_eval.csv.\n"
      ]
     },
     {
@@ -420,6 +421,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "- relations:\n",
+      "  products also purchased: \n",
+      "#1: BenchMaster Pocket Guide - Fly Fishing - Fishing\n",
+      "#2: Rebel Lures Teeny Wee Crawfish Fishing Lure\n",
+      "#3: Eagle Claw Featherlight 3/4 Line Weight Fly Rod, 2 Piece (Yellow, 6-Feet 6-Inch), 4/5 weight\n",
+      "#4: Cortland 444 Classic Double Taper Floating Fly Line\n",
+      "#5: Water Gremlin Gremlin Green/Tin Removable Split Shot Selector, 28ea/BB, 20ea/3/0, 8ea/7, 6ea/5\n",
+      "  products also viewed: \n",
+      "#1: Loon Outdoors UV Knot Sense\n",
+      "#2: Orvis Tie-fast Knot-tying Tool\n",
+      "#3: Umpqua Nylon Tippet Spools\n",
+      "#4: Umpqua Nylon Tippet Spools\n",
+      "#5: Stonfo Pinza Elite Hackle Plier - Original\n",
+      "  brand: Lake\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# You can textualize the relation information\n",
+    "print(skb.get_rel_info(answer_ids[0], n_rel=5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Counter({'product': 221, 'brand': 1})\n"
      ]
     }
@@ -440,15 +473,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/dfs/scratch0/shirwu/anaconda3/envs/torch2/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading QA dataset from data/prime/stark_qa/stark_qa.csv\n",
-      "Loaded from data/prime/processed!\n"
+      "Use file from /dfs/user/shirwu/.cache/huggingface/hub/datasets--snap-stanford--stark/snapshots/d4e405448836cbbc053241f99be29f7d81d1763c/qa/prime/stark_qa/stark_qa_human_generated_eval.csv.\n",
+      "Loading from /dfs/user/shirwu/.cache/huggingface/hub/datasets--snap-stanford--stark/snapshots/d4e405448836cbbc053241f99be29f7d81d1763c/skb/prime/processed!\n"
      ]
     }
    ],
@@ -462,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +512,7 @@
        "(129375, 8100498)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +535,7 @@
        " None)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +589,6 @@
      "output_type": "stream",
      "text": [
       "- relations:\n",
-      "\n",
       "  enzyme: {gene/protein: (CYP3A4),}\n",
       "  target: {gene/protein: (GABRB3, GLRA3),}\n",
       "  transporter: {gene/protein: (ABCC2, ABCG2, ABCC1, ABCB1, SLCO1B1, SLCO1B3),}\n",
