add baselines: bm25, colbertv2, llm2vec, gritlm, voyager

--- a/load_dataset.ipynb
+++ b/load_dataset.ipynb
@@ -477,19 +477,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/dfs/scratch0/shirwu/anaconda3/envs/torch2/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d6cd8b9bbe24a2197096809dab53f38",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "(…)ark_qa/stark_qa_human_generated_eval.csv:   0%|          | 0.00/15.3k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Use file from /dfs/user/shirwu/.cache/huggingface/hub/datasets--snap-stanford--stark/snapshots/d4e405448836cbbc053241f99be29f7d81d1763c/qa/prime/stark_qa/stark_qa_human_generated_eval.csv.\n",
-      "Loading from /dfs/user/shirwu/.cache/huggingface/hub/datasets--snap-stanford--stark/snapshots/d4e405448836cbbc053241f99be29f7d81d1763c/skb/prime/processed!\n"
+      "Use file from /dfs/user/shirwu/.cache/huggingface/hub/datasets--snap-stanford--stark/snapshots/289141cb3959eacfa9820dc60357aab07ae0adff/qa/prime/stark_qa/stark_qa_human_generated_eval_uncleaned.csv.\n",
+      "Extracting downloaded processed data to /dfs/user/shirwu/.cache/huggingface/hub/datasets--snap-stanford--stark/snapshots/289141cb3959eacfa9820dc60357aab07ae0adff/skb/prime\n",
+      "Loading from /dfs/user/shirwu/.cache/huggingface/hub/datasets--snap-stanford--stark/snapshots/289141cb3959eacfa9820dc60357aab07ae0adff/skb/prime/processed!\n"
      ]
     }
    ],
@@ -499,6 +506,34 @@
     "\n",
     "qa_dataset = load_qa(dataset_name)\n",
     "skb = load_skb(dataset_name, download_processed=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Use file from /dfs/user/shirwu/.cache/huggingface/hub/datasets--snap-stanford--stark/snapshots/289141cb3959eacfa9820dc60357aab07ae0adff/qa/prime/stark_qa/stark_qa_human_generated_eval_uncleaned.csv.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "104"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qa_dataset_hg = load_qa(dataset_name, human_generated_eval=True)\n",
+    "len(qa_dataset_hg)"
    ]
   },
   {
@@ -625,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
